[gd_scene load_steps=2 format=3 uid="uid://c77w5pwarx82n"]

[ext_resource type="Script" uid="uid://cg03s7ygmbvs5" path="res://Graphic Elements/Tooltips/tooltip_trigger.gd" id="1_ek2xo"]

[node name="TooltipTrigger" type="Control"]
z_index = 1
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ek2xo")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ExtendTimer" type="Timer" parent="."]
one_shot = true

[node name="ExpirationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="ExtendTimer" to="." method="_on_extend_timer_timeout"]
[connection signal="timeout" from="ExpirationTimer" to="." method="_on_expiration_timer_timeout"]
